fixing spacing for border

--- a/styles/exam.css
+++ b/styles/exam.css
@@ -25,8 +25,8 @@ nav ul {
     width: 95%;
     margin: 25px auto;
     background-color: white;
-    padding: 25px 1em;
-    border: 2px solid (52, 50, 159, 0.816);
+    padding: 15px 1.5em;
+    border: 1px solid (52, 50, 159, 0.816);
     border-radius: 25px;
     box-shadow: 5px 5px 0 0;
   }
